Cleaned up yaml.
Signed-off-by: Jay C <jay@alaska.edu>

--- a/config/amsr2_level1.yml
+++ b/config/amsr2_level1.yml
@@ -1,8 +1,7 @@
----
 configs:
   amsr2:
-    driver: "$AMSR2_HOME/singularity_run_amsr_level1.bash"
-    options: " "
+    driver: $AMSR2_HOME/singularity_run_amsr_level1.bash
     level0_glob: tp*.GCOM-W1.AMSR2.dat
+    options: ' '
 limits:
   processor: 1
