--- a/config/awips_scmi.yml
+++ b/config/awips_scmi.yml
@@ -1,115 +1,114 @@
----
-driver: "/opt/cspp/polar2grid_v_3_1/bin/polar2grid.sh"
 configs:
-  viirs:
-    options: " --num-workers 4 --sector-id Polar --letters --compress --fix-awips
-      --output-filename 'UAF_AII_{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{start_time:%Y%m%d_%H%M}.nc' "
-    save:
-    - UAF_AII_*.nc
-    p2g_config: awips_tiled.yaml
-    p2g_grid: scmi_grids.conf
-    tasks:
-      viirs_sdr:
-        ibands:
-          grid: polar_alaska_300
-          bands: 'i01 i02 i03 i04 i05 viirs_crefl08 '
-      'viirs_sdr ':
-        mbands:
-          grid: polar_alaska_700
-          bands: m03 m04 m08 m09 m10 m11 m12 m13 m14 m15 m16 dynamic_dnb adaptive_dnb
-            hncc_dnb viirs_crefl01 viirs_crefl03 viirs_crefl04
-  edr:
-    options: " --num-workers 4 --sector-id Polar --letters --compress --fix-awips
-      --output-filename 'UAF_AII_{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{start_time:%Y%m%d_%H%M}.nc' "
-    save:
-    - "*.nc"
-    p2g_config: awips_tiled.yaml
-    p2g_grid: scmi_grids.conf
-    tasks:
-      viirs_edr:
-        ibands:
-          grid: polar_alaska_700
-          bands: " AOD550 "
-  modis:
-    options: " --num-workers 4 --sector-id Polar --letters --compress --fix-awips
-      --output-filename 'UAF_AII_{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{start_time:%Y%m%d_%H%M}.nc' "
-    save:
-    - UAF_AII_*.nc
-    p2g_config: awips_tiled.yaml
-    p2g_grid: scmi_grids.conf
-    tasks:
-      modis_l1b:
-        qkm:
-          grid: polar_alaska_250
-          bands: vis01 vis02 modis_crefl01_250m modis_crefl02_250m
-        hkm:
-          grid: polar_alaska_500
-          bands: 'vis03 vis04 vis05 vis06 vis07 modis_crefl03_500m modis_crefl04_500m '
-        km:
-          grid: polar_alaska_1km
-          bands: 'vis26 bt20 bt27 bt23 bt28 bt29 bt30 bt31 bt32 '
-  clavrx:
-    options: " --sector-id Polar --letters --compress --fix-awips --grid-coverage
-      0.0001 --output-filename '{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{start_time:%Y%m%d_%H%M}.nc' "
-    save:
-    - "*.nc"
-    p2g_config: awips_tiled.yaml
-    p2g_grid: scmi_grids.conf
-    tasks:
-      clavrx:
-        qkm:
-          grid: polar_alaska_700
-          bands: cld_emiss_acha cld_height_acha cld_opd_dcomp cld_reff_dcomp cld_temp_acha
-            cloud_phase cloud_type cld_height_base_acha rain_rate
   acspo:
-    options: " --sector-id Polar --letters --compress --fix-awips --grid-coverage
-      0.0001 --output-filename '{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{start_time:%Y%m%d_%H%M}.nc' "
-    save:
-    - "*.nc"
+    options: ' --sector-id Polar --letters --compress --fix-awips --grid-coverage
+      0.0001 --output-filename ''{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{start_time:%Y%m%d_%H%M}.nc'' '
     p2g_config: awips_tiled.yaml
     p2g_grid: scmi_grids.conf
+    save:
+    - '*.nc'
     tasks:
       acspo:
         qkm:
-          grid: polar_alaska_500
           bands: sst
-  avhrr:
-    options: " --num-workers 8 --sector-id Polar --letters --compress --fix-awips
-      --output-filename 'UAF_AII_{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{start_time:%Y%m%d_%H%M}.nc' "
-    save:
-    - UAF_AII_*.nc
-    p2g_config: awips_tiled.yaml
-    p2g_grid: scmi_grids.conf
-    tasks:
-      avhrr_l1b_aapp:
-        qkm:
-          grid: polar_alaska_1km
-          bands: 'band1_vis band2_vis band3a_vis band3b_bt band4_bt band5_bt '
-  mirs:
-    options: " --sector-id Polar --letters --compress --fix-awips --grid-coverage
-      0.00001 --output-filename 'UAF_AII_{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{start_time:%Y%m%d_%H%M}.nc' "
-    save:
-    - UAF_AII_*.nc
-    p2g_config: awips_tiled.yaml
-    p2g_grid: scmi_grids.conf
-    tasks:
-      mirs:
-        5km:
-          grid: polar_alaska_5km
-          bands: " sfr rain_rate sea_ice snow_cover tpw swe clw btemp_23v btemp_183h1 "
+          grid: polar_alaska_500
   amsr2_l1b:
-    options: " --sector-id Polar --letters --compress --fix-awips --grid-coverage
-      0.00001 --output-filename 'UAF_AII_{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{start_time:%Y%m%d_%H%M}.nc' "
-    save:
-    - UAF_AII_*.nc
+    options: ' --sector-id Polar --letters --compress --fix-awips --grid-coverage
+      0.00001 --output-filename ''UAF_AII_{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{start_time:%Y%m%d_%H%M}.nc'' '
     p2g_config: awips_tiled.yaml
     p2g_grid: scmi_grids.conf
+    save:
+    - UAF_AII_*.nc
     tasks:
       amsr2_l1b:
         5km:
-          grid: polar_alaska_5km
           bands: 'btemp_10.7h btemp_10.7v btemp_18.7h btemp_18.7v btemp_23.8h btemp_23.8v
             btemp_36.5h btemp_36.5v btemp_6.9h btemp_6.9v btemp_7.3h btemp_7.3v btemp_89.0ah
             btemp_89.0av btemp_89.0bh btemp_89.0bv '
+          grid: polar_alaska_5km
+  avhrr:
+    options: ' --num-workers 8 --sector-id Polar --letters --compress --fix-awips
+      --output-filename ''UAF_AII_{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{start_time:%Y%m%d_%H%M}.nc'' '
+    p2g_config: awips_tiled.yaml
+    p2g_grid: scmi_grids.conf
+    save:
+    - UAF_AII_*.nc
+    tasks:
+      avhrr_l1b_aapp:
+        qkm:
+          bands: 'band1_vis band2_vis band3a_vis band3b_bt band4_bt band5_bt '
+          grid: polar_alaska_1km
+  clavrx:
+    options: ' --sector-id Polar --letters --compress --fix-awips --grid-coverage
+      0.0001 --output-filename ''{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{start_time:%Y%m%d_%H%M}.nc'' '
+    p2g_config: awips_tiled.yaml
+    p2g_grid: scmi_grids.conf
+    save:
+    - '*.nc'
+    tasks:
+      clavrx:
+        qkm:
+          bands: cld_emiss_acha cld_height_acha cld_opd_dcomp cld_reff_dcomp cld_temp_acha
+            cloud_phase cloud_type cld_height_base_acha rain_rate
+          grid: polar_alaska_700
+  edr:
+    options: ' --num-workers 4 --sector-id Polar --letters --compress --fix-awips
+      --output-filename ''UAF_AII_{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{start_time:%Y%m%d_%H%M}.nc'' '
+    p2g_config: awips_tiled.yaml
+    p2g_grid: scmi_grids.conf
+    save:
+    - '*.nc'
+    tasks:
+      viirs_edr:
+        ibands:
+          bands: ' AOD550 '
+          grid: polar_alaska_700
+  mirs:
+    options: ' --sector-id Polar --letters --compress --fix-awips --grid-coverage
+      0.00001 --output-filename ''UAF_AII_{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{start_time:%Y%m%d_%H%M}.nc'' '
+    p2g_config: awips_tiled.yaml
+    p2g_grid: scmi_grids.conf
+    save:
+    - UAF_AII_*.nc
+    tasks:
+      mirs:
+        5km:
+          bands: ' sfr rain_rate sea_ice snow_cover tpw swe clw btemp_23v btemp_183h1 '
+          grid: polar_alaska_5km
+  modis:
+    options: ' --num-workers 4 --sector-id Polar --letters --compress --fix-awips
+      --output-filename ''UAF_AII_{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{start_time:%Y%m%d_%H%M}.nc'' '
+    p2g_config: awips_tiled.yaml
+    p2g_grid: scmi_grids.conf
+    save:
+    - UAF_AII_*.nc
+    tasks:
+      modis_l1b:
+        hkm:
+          bands: 'vis03 vis04 vis05 vis06 vis07 modis_crefl03_500m modis_crefl04_500m '
+          grid: polar_alaska_500
+        km:
+          bands: 'vis26 bt20 bt27 bt23 bt28 bt29 bt30 bt31 bt32 '
+          grid: polar_alaska_1km
+        qkm:
+          bands: vis01 vis02 modis_crefl01_250m modis_crefl02_250m
+          grid: polar_alaska_250
+  viirs:
+    options: ' --num-workers 4 --sector-id Polar --letters --compress --fix-awips
+      --output-filename ''UAF_AII_{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{start_time:%Y%m%d_%H%M}.nc'' '
+    p2g_config: awips_tiled.yaml
+    p2g_grid: scmi_grids.conf
+    save:
+    - UAF_AII_*.nc
+    tasks:
+      viirs_sdr:
+        ibands:
+          bands: 'i01 i02 i03 i04 i05 viirs_crefl08 '
+          grid: polar_alaska_300
+      'viirs_sdr ':
+        mbands:
+          bands: m03 m04 m08 m09 m10 m11 m12 m13 m14 m15 m16 dynamic_dnb adaptive_dnb
+            hncc_dnb viirs_crefl01 viirs_crefl03 viirs_crefl04
+          grid: polar_alaska_700
+driver: /opt/cspp/polar2grid_v_3_1/bin/polar2grid.sh
 limits:
   processor: 2
