--- a/config/vaf_awips_reformat.yml
+++ b/config/vaf_awips_reformat.yml
@@ -1,9 +1,8 @@
----
 configs:
   default:
     driver: ncConvertVAF.py
-    options: "  "
-    to_process_glob:
-    - AFIMG*.nc
+    options: '  '
     save:
     - UAF*
+    to_process_glob:
+    - AFIMG*.nc
