--- a/config/acspo_awips.yml
+++ b/config/acspo_awips.yml
@@ -1,12 +1,11 @@
----
-driver: acspo2awips.sh
 configs:
   default:
-    options: "--grid-coverage 0 --output-pattern UAF_AWIPS_{satellite}_{instrument}_{product_name}_{grid_name}_{begin_time}
-      --source-name UAF "
     grid: 203
-    save:
-    - "*"
+    options: '--grid-coverage 0 --output-pattern UAF_AWIPS_{satellite}_{instrument}_{product_name}_{grid_name}_{begin_time}
+      --source-name UAF '
     p2g_config: uaf_awips_backend.ini
+    save:
+    - '*'
+driver: acspo2awips.sh
 limits:
   processor: 2
