--- a/config/acspo_l2.yml
+++ b/config/acspo_l2.yml
@@ -1,50 +1,49 @@
----
 configs:
-  npp:
-    driver: "/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash  "
-    options: " -p 2 -s npp --dynanc=/cspp/dyno/sst "
-    bias: "/opt/cspp/bias"
-    save:
-    - "*.nc"
-  noaa20:
-    driver: "/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash  "
-    options: " -p 2 -s n20 --dynanc=/cspp/dyno/sst "
-    bias: "/opt/cspp/bias"
-    save:
-    - "*.nc"
-  metopb:
-    driver: "/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash  "
-    options: " -p 2 -s metopb --dynanc=/cspp/dyno/sst "
-    bias: "/opt/cspp/bias"
-    save:
-    - "*.nc"
-  metopc:
-    driver: "/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash  "
-    options: " -p 2 -s metopc --dynanc=/cspp/dyno/sst "
-    bias: "/opt/cspp/bias"
-    save:
-    - "*.nc"
-  terra:
-    driver: "/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash --dynanc=/cspp/dyno/sst "
-    options: " -p 2 -s terra -vv "
-    bias: "/opt/cspp/bias"
-    save:
-    - "*.nc"
   aqua:
-    driver: "/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash --dynanc=/cspp/dyno/sst "
-    options: "-p 2 -s aqua -vv "
-    bias: "/opt/cspp/bias"
+    bias: /opt/cspp/bias
+    driver: '/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash --dynanc=/cspp/dyno/sst '
+    options: '-p 2 -s aqua -vv '
     save:
-    - "*.nc"
-  n19:
-    driver: "/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash --dynanc=/cspp/dyno/sst "
-    options: " -p 2 -s n19 -vv "
-    bias: "/opt/cspp/bias"
+    - '*.nc'
+  metopb:
+    bias: /opt/cspp/bias
+    driver: '/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash  '
+    options: ' -p 2 -s metopb --dynanc=/cspp/dyno/sst '
     save:
-    - "*.nc"
+    - '*.nc'
+  metopc:
+    bias: /opt/cspp/bias
+    driver: '/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash  '
+    options: ' -p 2 -s metopc --dynanc=/cspp/dyno/sst '
+    save:
+    - '*.nc'
   n18:
-    driver: "/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash --dynanc=/cspp/dyno/sst "
-    options: "-p 2 -s n18 -vv "
-    bias: "/opt/cspp/bias"
+    bias: /opt/cspp/bias
+    driver: '/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash --dynanc=/cspp/dyno/sst '
+    options: '-p 2 -s n18 -vv '
     save:
-    - "*.nc"
+    - '*.nc'
+  n19:
+    bias: /opt/cspp/bias
+    driver: '/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash --dynanc=/cspp/dyno/sst '
+    options: ' -p 2 -s n19 -vv '
+    save:
+    - '*.nc'
+  noaa20:
+    bias: /opt/cspp/bias
+    driver: '/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash  '
+    options: ' -p 2 -s n20 --dynanc=/cspp/dyno/sst '
+    save:
+    - '*.nc'
+  npp:
+    bias: /opt/cspp/bias
+    driver: '/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash  '
+    options: ' -p 2 -s npp --dynanc=/cspp/dyno/sst '
+    save:
+    - '*.nc'
+  terra:
+    bias: /opt/cspp/bias
+    driver: '/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash --dynanc=/cspp/dyno/sst '
+    options: ' -p 2 -s terra -vv '
+    save:
+    - '*.nc'
