--- a/config/metop_awips.yml
+++ b/config/metop_awips.yml
@@ -1,11 +1,10 @@
----
-driver: "$POLAR2GRID_HOME/bin/avhrr2awips.sh"
 configs:
   default:
-    options: " --grid-coverage 0  --source-name UAF "
     grid: 203
+    options: ' --grid-coverage 0  --source-name UAF '
+    p2g_config: uaf_awips_backend.ini
     save:
     - UAF_AWIPS_metop*_avhrr_band[12345]*
-    p2g_config: uaf_awips_backend.ini
+driver: $POLAR2GRID_HOME/bin/avhrr2awips.sh
 limits:
   processor: 2
