--- a/config/metop_l0.yml
+++ b/config/metop_l0.yml
@@ -1,10 +1,9 @@
----
 mphr:
-  product_type: hrp
+  disposition_mode: O
   instrument_model: 1
   processing_center: RUSx
-  processing_mode: "N"
-  disposition_mode: O
   processing_major_version: 2
   processing_minor_version: 0
+  processing_mode: N
+  product_type: hrp
   receiving_ground_station: RUS
