--- a/config/mirs_geotif.yml
+++ b/config/mirs_geotif.yml
@@ -1,17 +1,16 @@
----
-processing:
-  atms:
-    save:
-    - "*.tif"
-    - "*.png"
-    driver: mirs2gtiff.sh -g 203_10km --output-pattern uaf_gina_{satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.tif
-      --png-quicklook --grid-coverage 0 --dtype real4 --compress DEFLATE --tiled  -p
-      rain_rate sea_ice snow_cover surface_type tpw swe
-  amsu:
-    save:
-    - "*.tif"
-    - "*.png"
-    driver: mirs2gtiff.sh -g 203_10km --output-pattern uaf_gina_{satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.tif
-      --png-quicklook --grid-coverage 0 --dtype real4 --compress DEFLATE --tiled  -p
-      rain_rate sea_ice snow_cover surface_type tpw swe
 grids: place_holder
+processing:
+  amsu:
+    driver: mirs2gtiff.sh -g 203_10km --output-pattern uaf_gina_{satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.tif
+      --png-quicklook --grid-coverage 0 --dtype real4 --compress DEFLATE --tiled  -p
+      rain_rate sea_ice snow_cover surface_type tpw swe
+    save:
+    - '*.tif'
+    - '*.png'
+  atms:
+    driver: mirs2gtiff.sh -g 203_10km --output-pattern uaf_gina_{satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.tif
+      --png-quicklook --grid-coverage 0 --dtype real4 --compress DEFLATE --tiled  -p
+      rain_rate sea_ice snow_cover surface_type tpw swe
+    save:
+    - '*.tif'
+    - '*.png'
