--- a/config/mod14_gis.yml
+++ b/config/mod14_gis.yml
@@ -1,8 +1,7 @@
----
 configs:
   default:
     driver: fire_to_shapefile
     save:
-    - "*mod14.shp"
-    - "*mod14.dbf"
-    - "*mod14.shx"
+    - '*mod14.shp'
+    - '*mod14.dbf'
+    - '*mod14.shx'
