--- a/config/nucaps_sdr.yml
+++ b/config/nucaps_sdr.yml
@@ -1,9 +1,8 @@
----
 configs:
   nucaps:
     tasks:
     - 'snpp_sdr.rb -p 8 -m cris  '
     - 'snpp_sdr.rb -p 8 -m atms '
+env: $CSPP_SDR_HOME/cspp_sdr_env.sh
 limits:
   processor: 1
-env: "$CSPP_SDR_HOME/cspp_sdr_env.sh"
