--- a/config/snpp_sdr.yml
+++ b/config/snpp_sdr.yml
@@ -1,17 +1,16 @@
----
 configs:
-  viirs:
-    driver: viirs_sdr.sh
-    options: " -g -l "
-    rdr_glob: RNSCA-RVIRS*.h5
   atms:
     driver: atms_sdr.sh
-    options: "-l -z "
+    options: '-l -z '
     rdr_glob: RATMS-RNSCA*.h5
   cris:
     driver: cris_sdr.sh
-    options: "-l -z -f "
+    options: '-l -z -f '
     rdr_glob: RCRIS-RNSC*.h5
+  viirs:
+    driver: viirs_sdr.sh
+    options: ' -g -l '
+    rdr_glob: RNSCA-RVIRS*.h5
+env: $CSPP_SDR_HOME/cspp_sdr_env.sh
 limits:
   processor: 1
-env: "$CSPP_SDR_HOME/cspp_sdr_env.sh"
