--- a/config/terra_and_aqua_l1.yml
+++ b/config/terra_and_aqua_l1.yml
@@ -1,29 +1,28 @@
----
+clean_env: true
 processing:
-  save:
-  - "[at]1*.500m.hdf"
-  - "[at]1*.250m.hdf"
-  - "[at]1*.1000m.hdf"
-  - "[at]1*.geo.hdf"
-  t1:
-    l1_driver: 'modis_L1A.py --startnudge=0 --stopnudge=0 --mission=T '
-    geo_driver: modis_GEO.py -v --threshold=80
-    l1b_driver: modis_L1B.py
-    destripe: run_modis_destripe.csh terra
-    pds: "*001.PDS"
-    update_luts: update_luts.py terra -v
   a1:
-    l1_driver: 'modis_L1A.py --log --verbose --mission=A --startnudge=5 --stopnudge=5 '
-    geo_driver: 'modis_GEO.py --log --verbose --enable-dem --threshold=80 -a aqua.att
-      -e aqua.eph '
-    l1b_driver: modis_L1B.py
     destripe: run_modis_destripe.csh aqua
-    gbad_old: "/opt/modis/gbad/wrapper/gbad/run aqua.gbad.pds P1540957*001.PDS aqua.gbad_eph
-      aqua_eph aqua.gbad_att aqua_att"
     gbad: touch configfile; aqua_main -packetfile P1540957*001.PDS -noradfile $GBADHOME/localdata/noradfile
       -attitudefile aqua.att -ephemerisfile aqua.eph -listconfig yes
     gbad_note: touch configfile is stupid, but didn't want to clutter code with some
       random empty file makeing
+    gbad_old: /opt/modis/gbad/wrapper/gbad/run aqua.gbad.pds P1540957*001.PDS aqua.gbad_eph
+      aqua_eph aqua.gbad_att aqua_att
+    geo_driver: 'modis_GEO.py --log --verbose --enable-dem --threshold=80 -a aqua.att
+      -e aqua.eph '
+    l1_driver: 'modis_L1A.py --log --verbose --mission=A --startnudge=5 --stopnudge=5 '
+    l1b_driver: modis_L1B.py
     pds: P1540064*001.PDS
     update_luts: update_luts.py aqua -v
-clean_env: true
+  save:
+  - '[at]1*.500m.hdf'
+  - '[at]1*.250m.hdf'
+  - '[at]1*.1000m.hdf'
+  - '[at]1*.geo.hdf'
+  t1:
+    destripe: run_modis_destripe.csh terra
+    geo_driver: modis_GEO.py -v --threshold=80
+    l1_driver: 'modis_L1A.py --startnudge=0 --stopnudge=0 --mission=T '
+    l1b_driver: modis_L1B.py
+    pds: '*001.PDS'
+    update_luts: update_luts.py terra -v
