--- a/config/p2g_geotif.yml
+++ b/config/p2g_geotif.yml
@@ -1,146 +1,113 @@
----
 configs:
   viirs:
     p2g_args: "--tiled --compress DEFLATE"
-    grid_file: viirs_geotiff_grids.grd
+    grid_file: "viirs_geotiff_grids.grd"
     tasks:
-    - “/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 -p 'i01
-      i02 i03 i04 i05 m11 m12 m16' -g alaska_300 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
-    - "/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 -p 'm02
-      m03 m04 m06 m07 m08 m10 m11 m12 m15 dnb' -g alaska_600 --dtype real4 --output-pattern
-      {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
-    - "/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 -p 'i01
-      i02 i03 i04 i05 m08' -g alaska_300"
-    - "/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 --png-quicklook
-      -p  'm02 m03 m04 m05 m06 m07 m08 m10 m11 m12 m15 adaptive_dnb dynamic_dnb histogram_dnb'
-      -g alaska_600"
-    - "/opt/cspp/polar2grid_v_2_3/bin/crefl2gtiff.sh --grid-coverage 0.002 --true-color
-      -g alaska_300"
+     - "/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 -p 'i01 i02 i03 i04 i05 m11 m12 m16' -g alaska_300 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
+     - "/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 -p 'm02 m03 m04 m06 m07 m08 m10 m11 m12 m15 dnb' -g alaska_600 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
+     - "/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 -p 'i01 i02 i03 i04 i05 m08' -g alaska_300"
+     - "/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 --png-quicklook -p  'm02 m03 m04 m05 m06 m07 m08 m10 m11 m12 m15 adaptive_dnb dynamic_dnb histogram_dnb' -g alaska_600"
+     - "/opt/cspp/polar2grid_v_2_3/bin/crefl2gtiff.sh --grid-coverage 0.002 --true-color -g alaska_300"
+    save:
+     - "*.tif"
+     - "npp_viirs_dynamic_dnb_*_alaska_600.png"
+  viirs_ngfs:
+    p2g_args: " --gdal-driver COG --compress DEFLATE --extra-config-path /opt/gina/sandy-utils-1.7.4-20221116002627/config/p2g-ngfs "
+    grid_file: grids.yaml
+    tasks:
+    - "/opt/cspp/polar2grid_v_3_1/bin/polar2grid.sh -r viirs_sdr -w geotiff -p i04 M12 true_color ngfs_day_fire_rgb ngfs_fire_temp_rgb ngfs_microphysics_iband --method nearest -g alaska_polar_fit "
     save:
     - "*.tif"
-    - npp_viirs_dynamic_dnb_*_alaska_600.png
   viirs_gm:
     p2g_args: "--tiled --compress DEFLATE"
-    grid_file: viirs_geotiff_grids.grd
+    grid_file: "viirs_geotiff_grids.grd"
     tasks:
-    - "/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 -p 'i01
-      i02 i04 i05' -g alaska_gm_300 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
-    - "/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 -p 'm10
-      m11 m12 ' -g alaska_gm_600 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
-    - "/opt/cspp/polar2grid_v_2_3/bin/crefl2gtiff.sh --grid-coverage 0.002 --true-color
-      -g alaska_gm_300"
-    - "/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 -p 'i01
-      i02 i03' -g alaska_gm_300"
+     - "/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 -p 'i01 i02 i04 i05' -g alaska_gm_300 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
+     - "/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 -p 'm10 m11 m12 ' -g alaska_gm_600 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
+     - "/opt/cspp/polar2grid_v_2_3/bin/crefl2gtiff.sh --grid-coverage 0.002 --true-color -g alaska_gm_300"
+     - "/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 -p 'i01 i02 i03' -g alaska_gm_300"
     save:
-    - "*.tif"
-    - npp_viirs_dynamic_dnb_*_alaska_600.png
+     - "*.tif"
+     - "npp_viirs_dynamic_dnb_*_alaska_600.png"
   viirs_polar:
     p2g_args: "--tiled --compress DEFLATE"
-    grid_file: viirs_geotiff_grids.grd
+    grid_file: "viirs_geotiff_grids.grd"
     tasks:
-    - "/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 -p 'i01
-      i02 i03 i04 i05' -g polar_300"
-    - "/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 --png-quicklook
-      -p  'adaptive_dnb dynamic_dnb histogram_dnb hncc_dnb dnb' -g polar_600"
-    - "/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 -p 'i01
-      i02 i04 i05 ' -g polar_300 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
-    - "/opt/cspp/polar2grid_v_2_3/bin/crefl2gtiff.sh --grid-coverage 0.002 --true-color
-      -g polar_300"
+     - "/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 -p 'i01 i02 i03 i04 i05' -g polar_300"
+     - "/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 --png-quicklook -p  'adaptive_dnb dynamic_dnb histogram_dnb hncc_dnb dnb' -g polar_600"
+     - "/opt/cspp/polar2grid_v_2_3/bin/viirs2gtiff.sh --grid-coverage 0.002 -p 'i01 i02 i04 i05 ' -g polar_300 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
+     - "/opt/cspp/polar2grid_v_2_3/bin/crefl2gtiff.sh --grid-coverage 0.002 --true-color -g polar_300"
     save:
-    - "*.tif"
-    - npp_viirs_dynamic_dnb_*_polar_600.png
+     - "*.tif"
+     - "npp_viirs_dynamic_dnb_*_polar_600.png"
   modis:
     p2g_args: "--tiled --compress DEFLATE"
-    grid_file: modis_geotiff_grids.grd
+    grid_file: "modis_geotiff_grids.grd"
     tasks:
-    - "/opt/cspp/polar2grid_v_2_3/bin/modis2gtiff.sh --grid-coverage 0.002 -p 'ir31
-      ir30 bt30 bt31' -g alaska_1000 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
-    - "/opt/cspp/polar2grid_v_2_3/bin/crefl2gtiff.sh --grid-coverage 0.002 --true-color
-      -g alaska_250"
-    - "/opt/cspp/polar2grid_v_2_3/bin/modis2gtiff.sh --grid-coverage 0.002 -p 'vis01
-      vis02' -g alaska_250"
-    - "/opt/cspp/polar2grid_v_2_3/bin/modis2gtiff.sh --grid-coverage 0.002 -p 'vis01
-      vis02 vis03 vis04 vis05 vis06 vis07' -g alaska_500"
-    - "/opt/cspp/polar2grid_v_2_3/bin/modis2gtiff.sh --png-quicklook --grid-coverage
-      0.02 -p 'ir30 ir31 bt30 bt31' -g alaska_1000"
+     - "/opt/cspp/polar2grid_v_2_3/bin/modis2gtiff.sh --grid-coverage 0.002 -p 'ir31 ir30 bt30 bt31' -g alaska_1000 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
+     - "/opt/cspp/polar2grid_v_2_3/bin/crefl2gtiff.sh --grid-coverage 0.002 --true-color -g alaska_250"
+     - "/opt/cspp/polar2grid_v_2_3/bin/modis2gtiff.sh --grid-coverage 0.002 -p 'vis01 vis02' -g alaska_250"
+     - "/opt/cspp/polar2grid_v_2_3/bin/modis2gtiff.sh --grid-coverage 0.002 -p 'vis01 vis02 vis03 vis04 vis05 vis06 vis07' -g alaska_500"
+     - "/opt/cspp/polar2grid_v_2_3/bin/modis2gtiff.sh --png-quicklook --grid-coverage 0.02 -p 'ir30 ir31 bt30 bt31' -g alaska_1000"
     save:
-    - "*.tif"
-    - "*_modis_bt31_*_alaska_1000.png"
+     - "*.tif"
+     - "*_modis_bt31_*_alaska_1000.png"
   modis_polar:
     p2g_args: "--tiled --compress DEFLATE"
-    grid_file: modis_geotiff_grids.grd
+    grid_file: "modis_geotiff_grids.grd"
     tasks:
-    - "/opt/cspp/polar2grid_v_2_3/bin/modis2gtiff.sh --grid-coverage 0.002 -p 'ir31
-      ir30 bt30 bt31' -g polar_1km --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
-    - "/opt/cspp/polar2grid_v_2_3/bin/crefl2gtiff.sh --grid-coverage 0.002 --true-color
-      -g polar_250"
-    - "/opt/cspp/polar2grid_v_2_3/bin/modis2gtiff.sh --grid-coverage 0.002 -p 'vis01
-      vis02' -g polar_250"
-    - "/opt/cspp/polar2grid_v_2_3/bin/modis2gtiff.sh --grid-coverage 0.002 -p 'vis01
-      vis02 vis03 vis04 vis05 vis06 vis07' -g polar_500"
-    - "/opt/cspp/polar2grid_v_2_3/bin/modis2gtiff.sh --png-quicklook --grid-coverage
-      0.02 -p 'ir30 ir31 bt30 bt31' -g polar_1km"
+     - "/opt/cspp/polar2grid_v_2_3/bin/modis2gtiff.sh --grid-coverage 0.002 -p 'ir31 ir30 bt30 bt31' -g polar_1km --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
+     - "/opt/cspp/polar2grid_v_2_3/bin/crefl2gtiff.sh --grid-coverage 0.002 --true-color -g polar_250"
+     - "/opt/cspp/polar2grid_v_2_3/bin/modis2gtiff.sh --grid-coverage 0.002 -p 'vis01 vis02' -g polar_250"
+     - "/opt/cspp/polar2grid_v_2_3/bin/modis2gtiff.sh --grid-coverage 0.002 -p 'vis01 vis02 vis03 vis04 vis05 vis06 vis07' -g polar_500"
+     - "/opt/cspp/polar2grid_v_2_3/bin/modis2gtiff.sh --png-quicklook --grid-coverage 0.02 -p 'ir30 ir31 bt30 bt31' -g polar_1km"
     save:
-    - "*.tif"
-    - "*_modis_bt31_*_polar_500.png"
+     - "*.tif"
+     - "*_modis_bt31_*_polar_500.png"
   avhrr:
     p2g_args: "--tiled --compress DEFLATE"
-    grid_file: avhrr_geotiff_grids.grd
+    grid_file: "avhrr_geotiff_grids.grd"
     tasks:
-    - "/opt/cspp/polar2grid_v_2_3/bin/polar2grid.sh avhrr gtiff -g 203_1k --grid-coverage
-      0.001 -p 'band3b_bt band4_bt band5_bt' --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
-    - "/opt/cspp/polar2grid_v_2_3/bin/polar2grid.sh avhrr gtiff -g 203_1k --grid-coverage
-      0.001 -p 'band1_vis band2_vis band3a_vis band3b_bt band4_bt band5_bt' "
+     - "/opt/cspp/polar2grid_v_2_3/bin/polar2grid.sh avhrr gtiff -g 203_1k --grid-coverage 0.001 -p 'band3b_bt band4_bt band5_bt' --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
+     - "/opt/cspp/polar2grid_v_2_3/bin/polar2grid.sh avhrr gtiff -g 203_1k --grid-coverage 0.001 -p 'band1_vis band2_vis band3a_vis band3b_bt band4_bt band5_bt' "
     save:
-    - "*.tif"
+     - "*.tif"
   amsr2:
     p2g_args: "--tiled --compress DEFLATE"
-    grid_file: avhrr_geotiff_grids.grd
-    rescale: clavrx_rescale.ini
+    grid_file: "avhrr_geotiff_grids.grd"
+    rescale: "clavrx_rescale.ini"
     tasks:
-    - "/opt/cspp/polar2grid_v_2_3/bin/polar2grid.sh amsr2_l1b gtiff --grid-coverage
-      0.002 -g 203_10km -p 'rgb_color' "
+     - "/opt/cspp/polar2grid_v_2_3/bin/polar2grid.sh amsr2_l1b gtiff --grid-coverage 0.002 -g 203_10km -p 'rgb_color' "
     save:
-    - "*.tif"
-    - "*.log"
+     - "*.tif"
+     - "*.log"
   viirs_clavrx:
     p2g_args: "--tiled --compress DEFLATE"
-    grid_file: clavrx_geotiff_grids.grd
-    rescale: clavrx_rescale.ini
+    grid_file: "clavrx_geotiff_grids.grd"
+    rescale: "clavrx_rescale.ini"
     tasks:
-    - "/opt/cspp/polar2grid_v_2_3/bin/polar2grid.sh clavrx gtiff --grid-coverage 0.002
-      -g alaska_300 -p 'cld_emiss_acha cld_height_acha cld_opd_dcomp cld_reff_dcomp
-      cld_temp_acha cloud_phase cloud_type cld_base_altitude_acha ' "
-    - "/opt/cspp/polar2grid_v_2_3/bin/polar2grid.sh clavrx gtiff --grid-coverage 0.002
-      -g alaska_300 -p 'cld_emiss_acha cld_height_acha cld_opd_dcomp cld_reff_dcomp
-      cld_temp_acha cloud_phase cloud_type cld_base_altitude_acha ccl_layer_flag ccl_1
-      ccl_2 ccl_3 ccl_4 ccl_5' --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif "
+     - "/opt/cspp/polar2grid_v_2_3/bin/polar2grid.sh clavrx gtiff --grid-coverage 0.002 -g alaska_300 -p 'cld_emiss_acha cld_height_acha cld_opd_dcomp cld_reff_dcomp cld_temp_acha cloud_phase cloud_type cld_base_altitude_acha ' "
+     - "/opt/cspp/polar2grid_v_2_3/bin/polar2grid.sh clavrx gtiff --grid-coverage 0.002 -g alaska_300 -p 'cld_emiss_acha cld_height_acha cld_opd_dcomp cld_reff_dcomp cld_temp_acha cloud_phase cloud_type cld_base_altitude_acha ccl_layer_flag ccl_1 ccl_2 ccl_3 ccl_4 ccl_5' --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif "
     save:
-    - "*.tif"
-    - "*.log"
+     - "*.tif"
+     - "*.log"
   avhrr_clavrx:
     p2g_args: "--tiled --compress DEFLATE"
-    grid_file: clavrx_geotiff_grids.grd
-    rescale: clavrx_rescale.ini
+    grid_file: "clavrx_geotiff_grids.grd"
+    rescale: "clavrx_rescale.ini"
     tasks:
-    - "/opt/cspp/polar2grid_v_2_3/bin/polar2grid.sh clavrx gtiff --grid-coverage 0.002
-      -g alaska_1000 -p 'cld_emiss_acha cld_height_acha cld_opd_dcomp cld_reff_dcomp
-      cld_temp_acha cloud_phase cloud_type cld_base_altitude_acha ' "
-    - "/opt/cspp/polar2grid_v_2_3/bin/polar2grid.sh clavrx gtiff --grid-coverage 0.002
-      -g alaska_1000 -p 'cld_emiss_acha cld_height_acha cld_opd_dcomp cld_reff_dcomp
-      cld_temp_acha cloud_phase cloud_type cld_base_altitude_acha ccl_layer_flag ccl_1
-      ccl_2 ccl_3 ccl_4 ccl_5' --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif "
+     - "/opt/cspp/polar2grid_v_2_3/bin/polar2grid.sh clavrx gtiff --grid-coverage 0.002 -g alaska_1000 -p 'cld_emiss_acha cld_height_acha cld_opd_dcomp cld_reff_dcomp cld_temp_acha cloud_phase cloud_type cld_base_altitude_acha ' "
+     - "/opt/cspp/polar2grid_v_2_3/bin/polar2grid.sh clavrx gtiff --grid-coverage 0.002 -g alaska_1000 -p 'cld_emiss_acha cld_height_acha cld_opd_dcomp cld_reff_dcomp cld_temp_acha cloud_phase cloud_type cld_base_altitude_acha ccl_layer_flag ccl_1 ccl_2 ccl_3 ccl_4 ccl_5' --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif "
     save:
-    - "*.tif"
-    - "*.log"
+     - "*.tif"
+     - "*.log"
   mirs:
     p2g_args: "--tiled --compress DEFLATE"
-    grid_file: avhrr_geotiff_grids.grd
+    grid_file: "avhrr_geotiff_grids.grd"
     tasks:
-    - "/opt/cspp/polar2grid_v_2_3/bin/polar2grid.sh mirs gtiff -g 203_1k --grid-coverage
-      0.00001 -p 'rain_rate sea_ice sfr' --dtype real4 --output-pattern {satellite}_{product_name}_{begin_time}_{grid_name}.float.tif "
+     - "/opt/cspp/polar2grid_v_2_3/bin/polar2grid.sh mirs gtiff -g 203_1k --grid-coverage 0.00001 -p 'rain_rate sea_ice sfr' --dtype real4 --output-pattern {satellite}_{product_name}_{begin_time}_{grid_name}.float.tif "
     save:
-    - "*.tif"
-    - "*.log"
+     - "*.tif"
+     - "*.log"
 limits:
   processor: 1
