--- a/config/p2g_geotif.yml
+++ b/config/p2g_geotif.yml
@@ -18,6 +18,13 @@ configs:
     - "/opt/cspp/polar2grid_v_3_1/bin/polar2grid.sh -r viirs_sdr -w geotiff -p i04 M12 true_color ngfs_day_fire_rgb ngfs_fire_temp_rgb ngfs_microphysics_iband --method nearest -g alaska_polar_fit "
     save:
     - "*.tif"
+  viirs_aod:
+    p2g_args: " --gdal-driver COG --compress DEFLATE "
+    grid_file: grids.yaml
+    tasks:
+    - "/opt/cspp/polar2grid_v_3_1/bin/polar2grid.sh -r viirs_edr -w geotiff -p AOD550 -g alaska_polar_fit "
+    save:
+    - "*.tif"   
   viirs_gm:
     p2g_args: "--tiled --compress DEFLATE"
     grid_file: "viirs_geotiff_grids.grd"
