Config file to fix https://github.com/gina-alaska/jecable-projects/issues/30

--- a/config/p2g/readers/viirs_edr.yaml
+++ b/config/p2g/readers/viirs_edr.yaml
@@ -16,18 +16,6 @@ file_types:
         file_reader: !!python/name:satpy.readers.viirs_edr.VIIRSJRRFileHandler
         file_patterns:
             - 'JRR-CloudMask_{version}_{platform_shortname}_s{start_time:%Y%m%d%H%M%S%f}_e{end_time:%Y%m%d%H%M%S%f}_c{creation_time}.nc'
-    jrr_cloudbase:
-        file_reader: !!python/name:satpy.readers.viirs_edr.VIIRSJRRFileHandler
-        file_patterns:
-            - 'JRR-CloudBase{version}{platform_shortname}_s{start_time:%Y%m%d%H%M%S%f}e{end_time:%Y%m%d%H%M%S%f}c{creation_time}.nc'
-    jrr_cloudphase:
-        file_reader: !!python/name:satpy.readers.viirs_edr.VIIRSJRRFileHandler
-        file_patterns:
-            - 'JRR-CloudPhase{version}{platform_shortname}_s{start_time:%Y%m%d%H%M%S%f}e{end_time:%Y%m%d%H%M%S%f}c{creation_time}.nc'
-    jrr_ash:
-        file_reader: !!python/name:satpy.readers.viirs_edr.VIIRSJRRFileHandler
-        file_patterns:
-            - 'JRR-VolcanicAsh{version}{platform_shortname}_s{start_time:%Y%m%d%H%M%S%f}_e{end_time:%Y%m%d%H%M%S%f}_c{creation_time}.nc'
     jrr_aerosol:
         file_reader: !!python/name:satpy.readers.viirs_edr.VIIRSJRRFileHandler
         file_patterns:
@@ -48,20 +36,43 @@ file_types:
         file_reader: !!python/name:satpy.readers.viirs_edr.VIIRSLSTHandler
         file_patterns:
             - 'LST_{version}_{platform_shortname}_s{start_time:%Y%m%d%H%M%S%f}_e{end_time:%Y%m%d%H%M%S%f}_c{creation_time}.nc'
-    jrr_seaice:
+    jrr_cloudbase:
+        file_reader: !!python/name:satpy.readers.viirs_edr.VIIRSJRRFileHandler
+        file_patterns:
+            - 'JRR-CloudBase_{version}_{platform_shortname}_s{start_time:%Y%m%d%H%M%S%f}_e{end_time:%Y%m%d%H%M%S%f}_c{creation_time}.nc'
+    jrr_clouddcomp:
+        file_reader: !!python/name:satpy.readers.viirs_edr.VIIRSJRRFileHandler
+        file_patterns:
+            - 'JRR-CloudDCOMP_{version}_{platform_shortname}_s{start_time:%Y%m%d%H%M%S%f}_e{end_time:%Y%m%d%H%M%S%f}_c{creation_time}.nc'
+    jrr_cloudncomp:
+        file_reader: !!python/name:satpy.readers.viirs_edr.VIIRSJRRFileHandler
+        file_patterns:
+            - 'JRR-CloudNCOMP_{version}_{platform_shortname}_s{start_time:%Y%m%d%H%M%S%f}_e{end_time:%Y%m%d%H%M%S%f}_c{creation_time}.nc'
+    jrr_cloudlayers:
+        decode_cf: false
+        file_reader: !!python/name:satpy.readers.viirs_edr.VIIRSJRRFileHandler
+        file_patterns:
+            - 'JRR-CloudCoverLayers_{version}_{platform_shortname}_s{start_time:%Y%m%d%H%M%S%f}_e{end_time:%Y%m%d%H%M%S%f}_c{creation_time}.nc'
+    jrr_cloudphase:
+        decode_cf: false
+        file_reader: !!python/name:satpy.readers.viirs_edr.VIIRSJRRFileHandler
+        file_patterns:
+            - 'JRR-CloudPhase_{version}_{platform_shortname}_s{start_time:%Y%m%d%H%M%S%f}_e{end_time:%Y%m%d%H%M%S%f}_c{creation_time}.nc'
+    jrr_iceconcentration:
         file_reader: !!python/name:satpy.readers.viirs_edr.VIIRSJRRFileHandler
         file_patterns:
             - 'JRR-IceConcentration_{version}_{platform_shortname}_s{start_time:%Y%m%d%H%M%S%f}_e{end_time:%Y%m%d%H%M%S%f}_c{creation_time}.nc'
     jrr_iceage:
         file_reader: !!python/name:satpy.readers.viirs_edr.VIIRSJRRFileHandler
         file_patterns:
-            - 'JRR-IceAge_{version}_{platform_shortname}_s{start_time:%Y%m%d%H%M%S%f}_e{end_time:%Y%m%d%H%M%S%f}_c{creation_time}.nc'   
+            - 'JRR-IceAge_{version}_{platform_shortname}_s{start_time:%Y%m%d%H%M%S%f}_e{end_time:%Y%m%d%H%M%S%f}_c{creation_time}.nc'
     jrr_volcanicash:
         file_reader: !!python/name:satpy.readers.viirs_edr.VIIRSJRRFileHandler
         drop_variables:
           - Det_QF_Size
         file_patterns:
-            - 'JRR-VolcanicAsh_{version}_{platform_shortname}_s{start_time:%Y%m%d%H%M%S%f}_e{end_time:%Y%m%d%H%M%S%f}_c{creation_time}.nc'        
+            - 'JRR-VolcanicAsh_{version}_{platform_shortname}_s{start_time:%Y%m%d%H%M%S%f}_e{end_time:%Y%m%d%H%M%S%f}_c{creation_time}.nc'
+
 
 datasets:
     # NOTE: All non-surface reflectance file variables are dynamically loaded
